// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders default form without payment 1`] = `
<div
  class="ccmt-cff-Page-FormPage"
>
  <form
    autocomplete="false"
    class="rjsf"
  >
    <div
      class="form-group field field-object"
    >
      <div
        class="container-fluid"
      >
        <h2
          class="ccmt-cff-form-title"
        >
          Form
        </h2>
        <div />
        <div
          class="row"
        >
          <div
            class="form-group field field-string"
          >
            <label
              class="control-label"
              for="root_name"
            >
              name
            </label>
            <input
              class="form-control"
              id="root_name"
              label="name"
              placeholder="Name"
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
    <p>
      <button
        class="btn btn-info"
        type="submit"
      >
        Submit
      </button>
    </p>
  </form>
</div>
`;

exports[`renders title and description with html 1`] = `
<div
  class="ccmt-cff-Page-FormPage"
>
  <form
    autocomplete="false"
    class="rjsf"
  >
    <div
      class="form-group field field-object"
    >
      <div
        class="container-fluid"
      >
        <h2
          class="ccmt-cff-form-title"
        >
          Form 
          <img
            src="test"
          />
        </h2>
        <div>
          Hello 
          <b>
            123
          </b>
          <h1>
            Description
          </h1>
        </div>
        <div
          class="row"
        >
          <div
            class="form-group field field-string"
          >
            <label
              class="control-label"
              for="root_name"
            >
              name
            </label>
            <input
              class="form-control"
              id="root_name"
              label="name"
              placeholder=""
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
    <p>
      <button
        class="btn btn-info"
        type="submit"
      >
        Submit
      </button>
    </p>
  </form>
</div>
`;
